# engine

./: .gitignore  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.runtime  LICENSE  README.md  cliff.toml  release-plz.toml
.github/workflows/: ci.yml  images.yml  release-plz.yml  release-prep.yml  release.yml
api/asset/: Cargo.toml
api/component/: Cargo.toml
api/component/src/: lib.rs
api/component/src/v1/: mod.rs
api/component/src/v1/capability/: accelerometer.rs  battery.rs  camera.rs  depth.rs  emergency_stop.rs  encoder.rs  gnss.rs  gyroscope.rs  imu.rs  led.rs  lidar.rs  magnetometer.rs  microphone.rs  mmwave.rs  mod.rs  motor.rs  range.rs
api/component/src/v1/capability/speaker/: audio.rs  command.rs
api/drive/: Cargo.toml
api/explore/: Cargo.toml
api/explore/src/: lib.rs  v1.rs
api/follow/: Cargo.toml
api/frame/: Cargo.toml
api/frame/src/: lib.rs  v1.rs
api/joint/: Cargo.toml
api/localize/: Cargo.toml
api/localize/src/: lib.rs
api/localize/src/v1/: mod.rs  stream_demand.rs
api/map/: Cargo.toml
api/mission/: Cargo.toml
api/motion/: Cargo.toml
api/odometry/: Cargo.toml
api/odometry/src/: lib.rs  v1.rs
api/perception/: Cargo.toml  README.md
api/perception/src/: lib.rs  v1.rs
api/plan/: Cargo.toml
api/power/: Cargo.toml
api/presence/: Cargo.toml
api/safety/: Cargo.toml
api/video/: Cargo.toml
api/video/src/: lib.rs  v1.rs
bus/: CHANGELOG.md  Cargo.toml
bus/src/: builder.rs  leaf.rs  lib.rs  liveliness.rs  pubsub.rs  zenoh_typed.rs
component/: CHANGELOG.md  Cargo.toml
component-api/: CHANGELOG.md  Cargo.toml
component-api/src/: lib.rs  stream_demand.rs
component-api/src/capability/: accelerometer.rs  depth.rs  encoder.rs  gnss.rs  gyroscope.rs  magnetometer.rs  motor.rs  profile.rs  range.rs
component-api/src/capability/speaker/: audio.rs  mod.rs
component-api/src/v1/: mod.rs  stream_demand.rs
component-api/src/v1/capability/: battery.rs  camera.rs  emergency_stop.rs  imu.rs  led.rs  lidar.rs  microphone.rs  mmwave.rs  mod.rs
component-api/src/v1/capability/speaker/: command.rs
core/component/: Cargo.toml
core/engine/: Cargo.toml  README.md
core/engine/src/: clock.rs  execute.rs  lib.rs  presence.rs  sensor_store.rs  sim_clock.rs  sim_pose.rs  sim_reset.rs  sim_status.rs  staged.rs  step.rs
core/robot/: Cargo.toml  README.md
core/robot/src/v1/: localize_backend.rs  mod.rs  motion.rs  resolver.rs  robot.rs  role_resolution.rs  validation.rs
core/robot/tests/: robot_schema.rs
core/robot/tests/fixtures/: plan_robot.yaml
core/simulation/: Cargo.toml
core/simulation/src/: v1.rs
core/spatial/: Cargo.toml
core/spatial/src/: frame.rs  lib.rs  projection.rs  ray.rs  risk_model.rs  sensor.rs
core/structure/: Cargo.toml
core/structure/src/: lib.rs
engine/: CHANGELOG.md  Cargo.toml  README.md
engine/src/: clock.rs  conventions.rs  execute.rs  lib.rs  presence.rs  sensor_store.rs  sim_clock.rs  sim_pose.rs  sim_reset.rs  sim_status.rs  staged.rs  step.rs  support.rs
fixture/world/: ArenaWorld.wbt  LocalizationArena.wbt  MappingLoopArena.wbt
helpers/: Cargo.toml
infra/bus/: Cargo.toml
infra/helpers/: Cargo.toml
infra/router/: README.md
robot/: CHANGELOG.md  Cargo.toml  README.md
robot/src/: lib.rs
robot/tests/: robot_schema.rs
runtime/asset/: Cargo.toml  README.md
runtime/asset/src/: main.rs  runtime.rs
runtime/drive/: Cargo.toml  README.md
runtime/drive/src/: main.rs  runtime.rs  scenarios.rs
runtime/explore/: Cargo.toml  README.md
runtime/follow/: Cargo.toml
runtime/frame/: Cargo.toml  README.md
runtime/joint/: Cargo.toml
runtime/localize/: Cargo.toml  README.md
runtime/map/: Cargo.toml  README.md
runtime/mission/: Cargo.toml
runtime/motion/: Cargo.toml  README.md
runtime/odometry/: Cargo.toml
runtime/perception/: Cargo.toml  README.md
runtime/plan/: Cargo.toml
runtime/power/: Cargo.toml
runtime/presence/: Cargo.toml
runtime/safety/: Cargo.toml
runtime/video/: Cargo.toml
runtimes/asset/: CHANGELOG.md  Cargo.toml  README.md
runtimes/drive/: Cargo.toml  README.md
runtimes/explore/: Cargo.toml
runtimes/follow/: Cargo.toml  README.md
runtimes/frame/: CHANGELOG.md  Cargo.toml
runtimes/joint/: CHANGELOG.md  Cargo.toml  README.md
runtimes/localize/: Cargo.toml
runtimes/map/: Cargo.toml
runtimes/mission/: Cargo.toml
runtimes/motion/: Cargo.toml
runtimes/odometry/: CHANGELOG.md  Cargo.toml
runtimes/perception/: Cargo.toml
runtimes/plan/: Cargo.toml  README.md
runtimes/power/: CHANGELOG.md  Cargo.toml  README.md
runtimes/presence/: CHANGELOG.md  Cargo.toml
runtimes/router/: Cargo.toml  README.md
runtimes/safety/: Cargo.toml  README.md
runtimes/utils-scenario/: Cargo.toml
runtimes/video/: Cargo.toml  (+1 more)
scenario/: Cargo.toml  README.md
scenario/src/: definition.rs  harness.rs  helpers.rs  webots.rs
scripts/: build-images.sh  verify-runtime-release.sh
simulation/: Cargo.toml
spatial/: Cargo.toml
spatial/src/: frame.rs  projection.rs  ray.rs  risk_model.rs  sensor.rs
structure/: CHANGELOG.md  Cargo.toml
utils-component/: Cargo.toml
utils-component/src/: lib.rs  v1.rs
utils-conventions/: Cargo.toml
utils-conventions/src/: lib.rs
utils-helpers/: Cargo.toml
utils-helpers/src/: lib.rs
utils-robot/: Cargo.toml  README.md
utils-robot/src/: lib.rs  transform.rs
utils-robot/src/v1/: capability.rs  component.rs  conformance.rs  driver.rs  identity.rs  localize_backend.rs  mod.rs  motion.rs  profile.rs  resolver.rs  robot.rs  role_resolution.rs  validation.rs
utils-robot/tests/: robot_schema.rs
utils-robot/tests/fixtures/: plan_robot.yaml
utils-scenario/: Cargo.toml  README.md
utils-scenario-spec/: Cargo.toml  README.md
utils-scenario-spec/src/: lib.rs  records.rs
utils-scenario/src/: harness.rs  helpers.rs  webots.rs
utils-simulation/: Cargo.toml
utils-simulation/src/: capability.rs  lib.rs  v1.rs
utils-spatial/: Cargo.toml
utils-spatial/src/: frame.rs  geometry.rs  projection.rs  ray.rs  risk_model.rs  sensor.rs
utils-structure/: Cargo.toml
(+364 files in other folders)
