[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
publish = false
description = "Phoxal framework — engine + complete platform runtime set."
documentation = "https://github.com/phoxal/framework#readme"
homepage = "https://github.com/phoxal/framework"
repository = "https://github.com/phoxal/framework"

[workspace]
resolver = "3"
members = [
    "bus",
    "component-api",
    "engine",
    "runtimes/asset",
    "runtimes/asset/api",
    "runtimes/drive",
    "runtimes/drive/api",
    "runtimes/explore",
    "runtimes/explore/api",
    "runtimes/follow",
    "runtimes/follow/api",
    "runtimes/frame",
    "runtimes/frame/api",
    "runtimes/joint",
    "runtimes/joint/api",
    "runtimes/localize",
    "runtimes/localize/api",
    "runtimes/localize/orb-slam3-sys",
    "runtimes/map",
    "runtimes/map/api",
    "runtimes/mission",
    "runtimes/mission/api",
    "runtimes/motion",
    "runtimes/motion/api",
    "runtimes/odometry",
    "runtimes/odometry/api",
    "runtimes/perception",
    "runtimes/perception/api",
    "runtimes/plan",
    "runtimes/plan/api",
    "runtimes/power",
    "runtimes/power/api",
    "runtimes/presence",
    "runtimes/presence/api",
    "runtimes/router",
    "runtimes/router/api",
    "runtimes/safety",
    "runtimes/safety/api",
    "runtimes/utils-scenario",
    "runtimes/video",
    "runtimes/video/api",
    "utils-component",
    "utils-helpers",
    "utils-robot",
    "utils-scenario-spec",
    "utils-simulation",
    "utils-spatial",
    "utils-structure"
]

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
derive-new = "0.7.0"
derive_setters = "0.1.9"
dotenvy = "0.15.7"
erased-serde = "0.4.10"
nalgebra = { version = "0.34.2", features = ["serde-serialize"] }
openh264 = { version = "0.9.3", default-features = false, features = ["source"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.149"
serde_yaml = "0.9"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "signal", "sync", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
urdf-rs = "0.9.0"
zenoh = { version = "1.9.0" }
orb-slam3-sys = { path = "runtimes/localize/orb-slam3-sys" }
phoxal-bus = { path = "bus" }
phoxal-component-api = { path = "component-api" }
phoxal-engine = { path = "engine" }
phoxal-runtime-asset-api = { path = "runtimes/asset/api" }
phoxal-runtime-drive-api = { path = "runtimes/drive/api" }
phoxal-runtime-explore-api = { path = "runtimes/explore/api" }
phoxal-runtime-follow-api = { path = "runtimes/follow/api" }
phoxal-runtime-frame-api = { path = "runtimes/frame/api" }
phoxal-runtime-joint-api = { path = "runtimes/joint/api" }
phoxal-runtime-localize-api = { path = "runtimes/localize/api" }
phoxal-runtime-map-api = { path = "runtimes/map/api" }
phoxal-runtime-mission-api = { path = "runtimes/mission/api" }
phoxal-runtime-motion-api = { path = "runtimes/motion/api" }
phoxal-runtime-odometry-api = { path = "runtimes/odometry/api" }
phoxal-runtime-perception-api = { path = "runtimes/perception/api" }
phoxal-runtime-plan-api = { path = "runtimes/plan/api" }
phoxal-runtime-power-api = { path = "runtimes/power/api" }
phoxal-runtime-safety-api = { path = "runtimes/safety/api" }
phoxal-runtime-video-api = { path = "runtimes/video/api" }
phoxal-simulator-api = { git = "https://github.com/phoxal/simulator", branch = "main" }
phoxal-utils-component = { path = "utils-component" }
phoxal-utils-helpers = { path = "utils-helpers" }
phoxal-utils-robot = { path = "utils-robot" }
phoxal-utils-scenario = { path = "runtimes/utils-scenario" }
phoxal-utils-scenario-spec = { path = "utils-scenario-spec" }
phoxal-utils-spatial = { path = "utils-spatial" }
phoxal-utils-structure = { path = "utils-structure" }

[workspace.lints.rust]
unused = "warn"

[profile.release]
lto = false
codegen-units = 16

[patch."https://github.com/phoxal/engine"]
phoxal-bus = { path = "bus" }
phoxal-engine = { path = "engine" }
phoxal-component-api = { path = "component-api" }
phoxal-utils-component = { path = "utils-component" }
phoxal-utils-helpers = { path = "utils-helpers" }
phoxal-utils-robot = { path = "utils-robot" }
phoxal-utils-scenario-spec = { path = "utils-scenario-spec" }
phoxal-utils-simulation = { path = "utils-simulation" }
phoxal-utils-spatial = { path = "utils-spatial" }
phoxal-utils-structure = { path = "utils-structure" }

[patch."https://github.com/phoxal/framework"]
phoxal-bus = { path = "bus" }
phoxal-engine = { path = "engine" }
phoxal-component-api = { path = "component-api" }
phoxal-utils-component = { path = "utils-component" }
phoxal-utils-helpers = { path = "utils-helpers" }
phoxal-utils-robot = { path = "utils-robot" }
phoxal-utils-scenario-spec = { path = "utils-scenario-spec" }
phoxal-utils-simulation = { path = "utils-simulation" }
phoxal-utils-spatial = { path = "utils-spatial" }
phoxal-utils-structure = { path = "utils-structure" }
