[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
publish = false
description = "Phoxal framework — engine + complete platform runtime set."
documentation = "https://github.com/phoxal/framework#readme"
homepage = "https://github.com/phoxal/framework"
repository = "https://github.com/phoxal/framework"

[workspace]
resolver = "3"
members = [
    "infra/bus",
    "infra/helpers",
    "api/component",
    "core/engine",
    "core/component",
    "core/robot",
    "core/structure",
    "core/simulation",
    "core/spatial",
    "validation/scenario",
    "api/asset",      "runtime/asset",
    "api/drive",      "runtime/drive",
    "api/explore",    "runtime/explore",
    "api/follow",     "runtime/follow",
    "api/frame",      "runtime/frame",
    "api/joint",      "runtime/joint",
    "api/localize",   "runtime/localize",   "runtime/localize/orb-slam3-sys",
    "api/map",        "runtime/map",
    "api/mission",    "runtime/mission",
    "api/motion",     "runtime/motion",
    "api/odometry",   "runtime/odometry",
    "api/perception", "runtime/perception",
    "api/plan",       "runtime/plan",
    "api/power",      "runtime/power",
    "api/presence",   "runtime/presence",
    "api/safety",     "runtime/safety",
    "api/video",      "runtime/video",
]

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
derive-new = "0.7.0"
derive_setters = "0.1.9"
dotenvy = "0.15.7"
nalgebra = { version = "0.34.2", features = ["serde-serialize"] }
openh264 = { version = "0.9.3", default-features = false, features = ["source"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.149"
serde_yaml = "0.9"
serial_test = "3"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "signal", "sync", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
urdf-rs = "0.9.0"
zenoh = { version = "1.9.0" }
phoxal-infra-bus                       = { path = "infra/bus" }
phoxal-infra-helpers                   = { path = "infra/helpers" }
phoxal-api-component                   = { path = "api/component" }
phoxal-core-engine                     = { path = "core/engine" }
phoxal-core-component                  = { path = "core/component" }
phoxal-core-robot                      = { path = "core/robot" }
phoxal-core-structure                  = { path = "core/structure" }
phoxal-core-simulation                 = { path = "core/simulation" }
phoxal-core-spatial                    = { path = "core/spatial" }
phoxal-validation-scenario             = { path = "validation/scenario" }
phoxal-api-asset                       = { path = "api/asset" }
phoxal-api-drive                       = { path = "api/drive" }
phoxal-api-explore                     = { path = "api/explore" }
phoxal-api-follow                      = { path = "api/follow" }
phoxal-api-frame                       = { path = "api/frame" }
phoxal-api-joint                       = { path = "api/joint" }
phoxal-api-localize                    = { path = "api/localize" }
phoxal-api-map                         = { path = "api/map" }
phoxal-api-mission                     = { path = "api/mission" }
phoxal-api-motion                      = { path = "api/motion" }
phoxal-api-odometry                    = { path = "api/odometry" }
phoxal-api-perception                  = { path = "api/perception" }
phoxal-api-plan                        = { path = "api/plan" }
phoxal-api-power                       = { path = "api/power" }
phoxal-api-presence                    = { path = "api/presence" }
phoxal-api-safety                      = { path = "api/safety" }
phoxal-api-video                       = { path = "api/video" }
phoxal-runtime-localize-orb-slam3-sys  = { path = "runtime/localize/orb-slam3-sys" }

[workspace.lints.rust]
unused = "warn"

[profile.release]
lto = false
codegen-units = 16

[patch."https://github.com/phoxal/engine"]
phoxal-infra-bus           = { path = "infra/bus" }
phoxal-core-engine         = { path = "core/engine" }
phoxal-api-component       = { path = "api/component" }
phoxal-core-component      = { path = "core/component" }
phoxal-infra-helpers       = { path = "infra/helpers" }
phoxal-core-robot          = { path = "core/robot" }
phoxal-validation-scenario = { path = "validation/scenario" }
phoxal-core-simulation     = { path = "core/simulation" }
phoxal-core-spatial        = { path = "core/spatial" }
phoxal-core-structure      = { path = "core/structure" }

[patch."https://github.com/phoxal/framework"]
phoxal-infra-bus           = { path = "infra/bus" }
phoxal-core-engine         = { path = "core/engine" }
phoxal-api-component       = { path = "api/component" }
phoxal-core-component      = { path = "core/component" }
phoxal-infra-helpers       = { path = "infra/helpers" }
phoxal-core-robot          = { path = "core/robot" }
phoxal-validation-scenario = { path = "validation/scenario" }
phoxal-core-simulation     = { path = "core/simulation" }
phoxal-core-spatial        = { path = "core/spatial" }
phoxal-core-structure      = { path = "core/structure" }
