[package]
name = "phoxal-bus"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
derive-new = { workspace = true }
derive_setters = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
zenoh = { workspace = true }

[lints]
workspace = true
