[package]
name = "phoxal-component-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
derive-new = { workspace = true }
phoxal-bus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }

[lints]
workspace = true
