[package]
name = "phoxal-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "phoxal_engine"
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
phoxal-helpers = { workspace = true }
phoxal-component = { workspace = true }
phoxal-robot = { workspace = true }
phoxal-spatial = { workspace = true }
phoxal-structure = { workspace = true }
phoxal-component-api = { workspace = true }
urdf-rs = { workspace = true }
async-trait = { workspace = true }
phoxal-bus = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "signal", "sync", "time"] }

[dev-dependencies]
nalgebra.workspace = true
rmp-serde.workspace = true
