[package]
name = "phoxal-scenario"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "phoxal_scenario"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
nalgebra = { workspace = true }
phoxal-bus = { workspace = true }
phoxal-component = { workspace = true }
phoxal-engine = { workspace = true }
phoxal-robot = { workspace = true }
phoxal-runtime-explore-api = { workspace = true }
phoxal-runtime-follow-api = { workspace = true }
phoxal-runtime-frame-api = { workspace = true }
phoxal-runtime-localize-api = { workspace = true }
phoxal-runtime-map-api = { workspace = true }
phoxal-runtime-mission-api = { workspace = true }
phoxal-runtime-motion-api = { workspace = true }
phoxal-runtime-odometry-api = { workspace = true }
phoxal-runtime-plan-api = { workspace = true }
phoxal-runtime-safety-api = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[lints]
workspace = true
