[package]
name = "phoxal-utils-component"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
derive-new = {workspace = true}

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
