[package]
name = "phoxal-utils-conventions"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "phoxal_utils_conventions"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
