[package]
name = "phoxal-utils-robot"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
urdf-rs = { workspace = true }
nalgebra = { workspace = true }
phoxal-utils-component = { path = "../utils-component" }
phoxal-utils-conventions = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
