[package]
name = "phoxal-utils-spatial"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "phoxal_utils_spatial"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
nalgebra.workspace = true
phoxal-bus.workspace = true
phoxal-component-api.workspace = true
phoxal-utils-component.workspace = true
phoxal-utils-robot.workspace = true
phoxal-utils-structure.workspace = true
serde = { workspace = true, features = ["derive"] }
urdf-rs.workspace = true

[lints]
workspace = true
