[package]
name = "phoxal-api-localize"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
phoxal-api-component = { workspace = true }
phoxal-core-robot = { workspace = true }
phoxal-infra-bus = { workspace = true }
phoxal-api-frame = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
