[package]
name = "phoxal-api-odometry"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
phoxal-infra-bus = { workspace = true }
phoxal-api-frame = { workspace = true }
phoxal-api-joint = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
