[package]
name = "phoxal-api-perception"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
phoxal-infra-bus = { workspace = true }
phoxal-api-frame = { workspace = true }
phoxal-api-localize = { workspace = true }
phoxal-api-map = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
