[package]
name = "phoxal-api-video"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
phoxal-infra-bus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }

[lints]
workspace = true
