[package]
name = "phoxal-core-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "phoxal_core_engine"
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
phoxal-infra-helpers = { workspace = true }
phoxal-core-component = { workspace = true }
phoxal-core-robot = { workspace = true }
phoxal-core-spatial = { workspace = true }
phoxal-core-structure = { workspace = true }
phoxal-api-component = { workspace = true }
urdf-rs = { workspace = true }
async-trait = { workspace = true }
phoxal-infra-bus = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "signal", "sync", "time"] }

[dev-dependencies]
nalgebra.workspace = true
rmp-serde.workspace = true
