[package]
name = "phoxal-core-robot"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
urdf-rs = { workspace = true }
nalgebra = { workspace = true }
phoxal-core-component = { path = "../component" }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
