[package]
name = "phoxal-core-simulation"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
derive-new = {workspace = true}
phoxal-core-component.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
