[package]
name = "phoxal-core-spatial"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "phoxal_core_spatial"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
nalgebra.workspace = true
phoxal-api-component.workspace = true
phoxal-core-component.workspace = true
phoxal-core-robot.workspace = true
phoxal-core-structure.workspace = true
serde = { workspace = true, features = ["derive"] }
urdf-rs.workspace = true

[lints]
workspace = true
