[package]
name = "phoxal-core-structure"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
derive-new = {workspace = true}
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
urdf-rs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
