[package]
name = "phoxal-infra-helpers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "phoxal_infra_helpers"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
