[package]
name = "phoxal-runtime-asset"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
phoxal-core-engine = { workspace = true }
phoxal-infra-bus = { workspace = true }
phoxal-api-asset = { workspace = true }
phoxal-infra-helpers = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "signal", "process"] }
tracing = { workspace = true }
