[package]
name = "phoxal-runtime-drive"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
phoxal-infra-bus = { workspace = true }
phoxal-api-component = { workspace = true }
phoxal-api-drive = { workspace = true }
phoxal-core-engine = { workspace = true }
phoxal-core-component = { workspace = true }
phoxal-core-robot = { workspace = true }
phoxal-core-spatial = { workspace = true }
phoxal-core-structure = { workspace = true }
phoxal-infra-helpers = { workspace = true }
phoxal-validation-scenario = { workspace = true }

nalgebra = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "signal", "process"] }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
